# bike-demand

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  flake.nix  main.py  pyproject.toml
pages/: 1_Explore_Files.py  2_Bike_Demand_Map.py
src/adapters/: bluebikes_raw_repo.py  bluebikes_repository.py  boston_weather_repo.py  model_repository.py  processed_data_repository.py  s3.py  weather_repository.py
src/ingestion/: bluebikes_raw_repo.py  bluebikes_repository.py  boston_weather_repo.py
src/pipelines/: prepare_data.py
src/pipelines/bluebikes/: column_mapping.py  process_stations.py  process_trips.py
src/processing/: merge_weather.py  standardize_bluebikes_data.py  standardize_stations.py
src/repositories/: hubway_ingest.py  process.py
src/schemas/raw/: trip.py  weather.py
src/services/: model_training.py
src/ui/: explore.py
tests/: test_merge_weather.py  test_processing.py  test_s3.py  test_standardize_bluebikes_data.py  test_station_version.py
