[project]
name = "bike-demand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commitizen>=4.16.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
    "streamlit>=1.58.0",
    "tool>=0.8.0",
]

[tool.ruff]
target-version = "py313"   # match your requires-python
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (likely bugs)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by the formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["my_project"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.commitizen.customize]
message_template = "{{change_type}}({{scope}}): {{message}}"
example = "feat(ui): add user search page"
schema = "<type>(<scope>): <body>"
schema_pattern = "(feat|fix|refactor|perf|test|docs|style|chore|ci|build)\\((domain|service|repo|ui|schemas|db|config|deps|test)\\):(\\s.*)"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change"
choices = [
    { value = "feat",     name = "feat:     A new feature (MINOR bump)" },
    { value = "fix",      name = "fix:      A bug fix (PATCH bump)" },
    { value = "refactor", name = "refactor:  Rewrite without changing behavior" },
    { value = "perf",     name = "perf:     Performance improvement" },
    { value = "test",     name = "test:     Adding or fixing tests" },
    { value = "docs",     name = "docs:     Documentation only" },
    { value = "style",    name = "style:    Formatting, no logic change" },
    { value = "chore",    name = "chore:    Maintenance, tooling, deps" },
    { value = "ci",       name = "ci:       CI/CD configuration" },
    { value = "build",    name = "build:    Build system changes" },
]

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
message = "Select the scope (architectural layer)"
choices = [
    { value = "ui",      name = "ui:      Streamlit pages, widgets, callbacks, session state" },
    { value = "schemas", name = "schemas: DTOs, serializers, validation models" },
    { value = "service", name = "service: Application services, use cases, orchestration" },
    { value = "domain",  name = "domain:  Entities, value objects, business rules" },
    { value = "repo",    name = "repo:    Data access, persistence, ORM queries" },
    { value = "db",      name = "db:      Migrations, schema changes, indexes" },
    { value = "config",  name = "config:  Settings, environment variables" },
    { value = "deps",    name = "deps:    Package updates" },
    { value = "test",    name = "test:    Test infrastructure, fixtures" },
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Commit description (imperative mood, lowercase, no period)"
