[project]
name = "bike-demand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "matplotlib>=3.11.0",
  "meteostat>=2.1.4",
  "pandera>=0.32.0",
  "polars>=1.41.2",
  "pre-commit>=4.6.0",
  "prefect>=3.7.7",
  "pytest>=9.1.1",
  "pytest-coverage>=0.0",
  "rapidfuzz>=3.14.5",
  "streamlit>=1.58.0",
  "tool>=0.8.0",
  "tqdm>=4.68.3",
  "types-tqdm>=4.68.0.20260608",
]
[tool.ruff]
target-version = "py313" # match your requires-python
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "N",   # pep8-naming
  "UP",  # pyupgrade (modernize syntax)
  "B",   # flake8-bugbear (likely bugs)
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
]
ignore = [
  "E501", # line too long (handled by the formatter)
]
[tool.ruff.lint.isort]
known-first-party = ["my_project"]
[tool.ruff.format]
quote-style = "double"
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
[dependency-groups]
dev = ["mypy>=2.1.0", "pre-commit>=4.6.0", "ruff>=0.15.18"]
